# ferrogallic

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
ferrogallic/: Cargo.toml
ferrogallic/src/: api.rs  files.rs  main.rs  opt.rs  reply.rs  server.rs  web_files.rs  words.rs
ferrogallic/src/api/: game.rs  lobby.rs
ferrogallic/src/files/: audio.rs  web.rs
ferrogallic/src/words/: common.rs  game.rs
ferrogallic_api/: Cargo.toml
ferrogallic_api/src/: lib.rs
ferrogallic_shared/: Cargo.toml
ferrogallic_shared/src/: api.rs  config.rs  domain.rs  lib.rs  paths.rs
ferrogallic_shared/src/api/: game.rs  lobby.rs
ferrogallic_web/: Cargo.toml
ferrogallic_web/src/: api.rs  app.rs  audio.rs  canvas.rs  component.rs  dom.rs  lib.rs  page.rs  route.rs  util.rs
ferrogallic_web/src/canvas/: draw.rs  flood_fill.rs
ferrogallic_web/src/component/: app.rs  choose_name.rs  choose_popup.rs  choose_toolbar.rs  color_toolbar.rs  create.rs  error_bar.rs  error_popup.rs  guess_area.rs  guess_input.rs  guess_template.rs  in_game.rs  index.rs  player.rs  players.rs  timer.rs  tool_toolbar.rs  undo_toolbar.rs
ferrogallic_web/src/page/: choose_name.rs  create.rs  in_game.rs
ferrogallic_web/src/styles/: main.css
src/: server.rs  web_files.rs
