[package]
name = "ferrogallic"
version = "0.0.0"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
description = "Clone of skribble.io."
repository = "https://github.com/erikdesjardins/ferrogallic"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.2"
bytes = "0.5"
ferrogallic_shared = { path = "../ferrogallic_shared" }
futures = "0.3"
env_logger = { version = "0.7", default-features = false, features = ["humantime"] }
log = "0.4"
rand = "0.7"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2" , features = ["macros", "rt-threaded", "sync", "time"] }
warp = { version = "0.2", default-features = false, features = ["websocket"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
