[package]
name = "ferrogallic_web"
version = "0.0.0"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
description = "Clone of skribble.io."
repository = "https://github.com/erikdesjardins/ferrogallic"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
ferrogallic_shared = { path = "../ferrogallic_shared" }
console_error_panic_hook = "0.1"
console_log = "0.1"
log = { version = "0.4", features = ["release_max_level_off"] }
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["strict-macro"] }
web-sys = { version = "0.3", features = ["Window", "Location", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "DomRect", "ImageData"] }
yew = { version = "0.14", features = ["web_sys"] }
yew-router = { version = "0.11", features = ["web_sys"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
