[package]
name = "ferrogallic_web"
version = "0.0.0"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
description = "Clone of skribble.io."
repository = "https://github.com/erikdesjardins/ferrogallic"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
boolinator = "2.4"
console_error_panic_hook = "0.1"
ferrogallic_shared = { path = "../ferrogallic_shared" }
gloo = "0.2"
itertools = "0.9"
log = { version = "0.4", features = ["release_max_level_off"] }
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["strict-macro"] }
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "DomRect", "ImageData", "TouchList", "Touch"] }
yew = "0.16"
yew-router = "0.13"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
