[package]
name = "ferrogallic_web"
version = "0.0.0"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
description = "Clone of skribble.io."
repository = "https://github.com/erikdesjardins/ferrogallic"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
console_error_panic_hook = "0.1"
ferrogallic_shared = { path = "../ferrogallic_shared" }
futures = "0.3.21"
gloo = "0.11"
itertools = "0.12"
js-sys = "0.3"
log = { version = "0.4", features = ["release_max_level_off"] }
percent-encoding = "2.1"
thiserror = "1.0"
time = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "HtmlAudioElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "DomRect", "ImageData", "TouchList", "Touch"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
